--- a/src/Components/ComputerItem.css
+++ b/src/Components/ComputerItem.css
@@ -4,6 +4,14 @@
     align-items: end;
 }
 
+.info, .status{
+    padding-bottom: 20px;
+}
+
+.status{
+    margin-right: 50px;
+}
+
 .info-title{
     font-size: 20px;
     color: #7B7B7B;
@@ -14,4 +22,5 @@
 .status-title{
     font-size: 20px;
     font-weight: 600;
+    padding-bottom: 10px;
 }
